fix editor icons not aligned properly

--- a/src/stylesheets/mixins/icon.sass
+++ b/src/stylesheets/mixins/icon.sass
@@ -2,13 +2,17 @@
 
 =icon
   -webkit-appearance: none
+  align-items: center
   background: transparent
   border-radius: 4px
   border: none
+  display: inline-flex
+  justify-content: center
 
   +lte_ipad
     font-size: 16px
     height: 23px
+    line-height: 23px
     margin: 0 1px
     padding: 0 4px
     width: 32px
